#533 - Improving double processing.  Making AsyncTask definition match reference variable.  Adding logging to better track progress.